Closed
Bug 1504980
Opened 7 years ago
Closed 7 years ago
Crash in nsIPresShell::NativeAnonymousContentRemoved
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | fixed |
People
(Reporter: calixte, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-dca26385-01db-4030-ad08-860f90181105.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll nsIPresShell::NativeAnonymousContentRemoved layout/base/PresShell.cpp:2115
1 xul.dll nsIFrame::AutoPostDestroyData::~AutoPostDestroyData layout/generic/nsIFrame.h:654
2 xul.dll nsBlockFrame::RemoveFrame layout/generic/nsBlockFrame.cpp:5390
3 xul.dll nsCSSFrameConstructor::ContentRemoved layout/base/nsCSSFrameConstructor.cpp:7946
4 xul.dll nsCSSFrameConstructor::RecreateFramesForContent layout/base/nsCSSFrameConstructor.cpp:8976
5 xul.dll void mozilla::RestyleManager::DoProcessPendingRestyles layout/base/RestyleManager.cpp:3056
6 xul.dll mozilla::PresShell::DoFlushPendingNotifications layout/base/PresShell.cpp:4343
7 xul.dll nsIDocument::FlushPendingNotifications dom/base/nsDocument.cpp:7792
8 xul.dll nsGenericHTMLElement::GetOffsetRect dom/html/nsGenericHTMLElement.cpp:227
9 xul.dll static bool mozilla::dom::HTMLElement_Binding::get_offsetHeight dom/bindings/HTMLElementBinding.cpp:1227
=============================================================
There are 5 crashes (from 3 installations) in nightly 65 with buildid 20181105100136. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1497524.
[1] https://hg.mozilla.org/mozilla-central/rev?node=3f3db4de7859
Flags: needinfo?(emilio)
| Assignee | ||
Comment 1•7 years ago
|
||
In case fuzzers or somebody can catch this in a reproducible way...
I'd be interested in knowing what the hell is going on.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/bfedbb67e540
Null-check + assert. r=smaug
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•