layout/base/PresShell.cpp
@@ -2104,8 +2104,9 @@ static nsIContent* GetNativeAnonymousSubtreeRoot(nsIContent* aContent)
     return nullptr;
   }
   auto* current = aContent;
-  while (!current->IsRootOfNativeAnonymousSubtree()) {
+  while (current && !current->IsRootOfNativeAnonymousSubtree()) {
     current = current->GetFlattenedTreeParent();
+    MOZ_DIAGNOSTIC_ASSERT(current, "How?");
   }
   return current;
 }
